@@ -15,6 +15,7 @@
 		MYSQL_TYPE_DATETIME is the default in the drop-in library now
 		and SQLR_MAP_DATETIME_TO_DATE has been removed
 	mysql drop-in library sets column flags correctly now
+	mysql drop-in library runs appropriate kill/shutdown queries now
 
 0.66.0 - fixed mysql set isolation level query
 	updated mysql connection to run commit/rollback at the end of every
